# serial-unit-testing

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: macos.yml  rust.yml  ubuntu.yml  windows.yml
doc/: example.script  script.md
src/: check.rs  commands.rs  error.rs  lib.rs  list.rs  main.rs  monitor.rs  run.rs  send.rs  serial.rs  utils.rs  verify.rs  version.rs
src/monitor/: control.rs  enums.rs  event.rs  help_window.rs  helpers.rs  main_window.rs  mod.rs  text_storage.rs  ui.rs  window.rs  window_manager.rs
src/parser/: char_util.rs  error.rs  finite_state_machine.rs  finite_state_maschine.rs  lexer.rs  mod.rs  options.rs  string_util.rs  token.rs
src/serial/: loopback.rs  mod.rs  settings.rs
src/tests/: mod.rs  test_case.rs  test_suite.rs
src/windows/: mod.rs  window.rs  window_manager.rs
