[package]
name = "serial-unit-testing"
description = "Serial unit testing program and library"
version = "0.1.3"
authors = ["MarkAtk"]
edition = "2018"
license = "MIT"
repository = "https://github.com/markatk/serial-unit-testing"
readme = "README.md"
keywords = ["serial", "test", "unit"]
categories = ["command-line-utilities", "development-tools", "parsing"]

[badges]
appveyor = { repository = "https://ci.appveyor.com/project/markatk/serial-unit-testing" }
travis-ci = { repository = "markatk/serial-unit-testing" }

[lib]
name = "serial_unit_testing"
path = "src/lib.rs"

[[bin]]
name = "sut"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
serialport = "3.2.0"
colored = "1.7.0"
regex = "1.1.0"
