[package]
name = "serial-unit-testing"
description = "Serial unit testing program and library"
version = "0.2.0"
authors = ["MarkAtk"]
edition = "2018"
license = "MIT"
repository = "https://github.com/markatk/serial-unit-testing"
readme = "README.md"
keywords = ["serial", "test", "unit"]
categories = ["command-line-utilities", "development-tools", "parsing"]

[badges]
appveyor = { repository = "markatk/serial-unit-testing" }
travis-ci = { repository = "markatk/serial-unit-testing" }

[lib]
name = "serial_unit_testing"
path = "src/lib.rs"

[[bin]]
name = "sut"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
serialport = "3.3.0"
colored = "1.8.0"
regex = "1.2.1"
crossterm = "0.9.6"

[dependencies.tui]
version = "0.6.2"
default-features = false
features = ['crossterm']
