[package]
name = "serial-unit-testing"
description = "Serial unit testing program and library"
version = "0.2.1"
authors = ["MarkAtk"]
edition = "2018"
license = "MIT"
repository = "https://github.com/markatk/serial-unit-testing"
readme = "README.md"
keywords = ["serial", "test", "unit"]
categories = ["command-line-utilities", "development-tools", "parsing"]

[features]
default = ["sut", "colored-tests"]
sut = ["clap", "tui", "crossterm", "colored"]
colored-tests = ["colored"]

[badges]
travis-ci = { repository = "markatk/serial-unit-testing" }

[lib]
name = "serial_unit_testing"
path = "src/lib.rs"

[[bin]]
name = "sut"
path = "src/main.rs"
required-features = ["sut"]

[dependencies]
serialport = "3.3.0"
regex = "1.3.3"
clap = { version = "2.33.0", optional = true }
colored = { version = "1.9.2", optional = true }
crossterm = { version = "0.14.2", optional = true }

[dependencies.tui]
version = "0.8.0"
optional = true
default-features = false
features = ['crossterm']
